respondent profile survey index, question statistic wip
